--- a/index.html
+++ b/index.html
@@ -227,4 +227,36 @@
                         </div>
                     </div>
                 </div>
-               
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-header bg-info text-white">
+                            <h5>Ervas</h5>
+                        </div>
+                        <div class="card-body">
+                            <ul>
+                                <li>Hortelã (resistente ao frio)</li>
+                                <li>Lavanda (permanente em climas mais frescos)</li>
+                                <li>Cebolinha (em estufas ou climas mais amenos)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </div>
+
+    <!-- Rodapé -->
+    <footer class="footer">
+        <p>Referências:</p>
+        <ul>
+            <li><a href="https://nutricaodesafras.com.br/estacoes-do-ano-e-agricultura?teste=a" target="_blank" class="text-white">Nutrição das Safras</a></li>
+            <li><a href="https://blog.jacto.com.br/calendario-agricola-conheca-as-melhores-epocas-para-plantar/" target="_blank" class="text-white">Jacto Blog</a></li>
+            <li><a href="https://geoagri.com.br/blog/37/a-importancia-da-estacao-meteorologica-na-agricultura" target="_blank" class="text-white">Geoagri</a></li>
+        </ul>
+    </footer>
+
+    <!-- Scripts do Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
